// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb strands-agent-connection generator > should add rdb serve-local dependency to the agent prefixed serve-local 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "my-agent-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb strands-agent-connection generator > should fall back to agent-serve-local when no component name 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "agent-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
